--- a/src/main/resources/assets/redstonemod/blockstates/redstone_paste_wire_east.json
+++ b/src/main/resources/assets/redstonemod/blockstates/redstone_paste_wire_east.json
@@ -1,16 +1,5 @@
 {
 	"variants": {
-		"model=none,power=0": { "model": "redstonemod:redstone_paste-none", "x": 270, "y": 90 },
-		"model=ns,power=0": { "model": "redstonemod:redstone_paste-ns", "x": 270, "y": 90 },
-		"model=we,power=0": { "model": "redstonemod:redstone_paste-we", "x": 270, "y": 90 },
-		"model=nw,power=0": { "model": "redstonemod:redstone_paste-nw", "x": 270, "y": 90 },
-		"model=ne,power=0": { "model": "redstonemod:redstone_paste-ne", "x": 270, "y": 90 },
-		"model=sw,power=0": { "model": "redstonemod:redstone_paste-sw", "x": 270, "y": 90 },
-		"model=se,power=0": { "model": "redstonemod:redstone_paste-se", "x": 270, "y": 90 },
-		"model=nsw,power=0": { "model": "redstonemod:redstone_paste-nsw", "x": 270, "y": 90 },
-		"model=nse,power=0": { "model": "redstonemod:redstone_paste-nse", "x": 270, "y": 90 },
-		"model=nwe,power=0": { "model": "redstonemod:redstone_paste-nwe", "x": 270, "y": 90 },
-		"model=swe,power=0": { "model": "redstonemod:redstone_paste-swe", "x": 270, "y": 90 },
-		"model=nswe,power=0": { "model": "redstonemod:redstone_paste-nswe", "x": 270, "y": 90 }
+		"normal": { "model": "redstonemod:redstone_paste_wire_east" }
 	}
 }
